tests/NormalTests/paczka1/small_fuzzy/85451979.err
Error in line 1: S823 S823 38,5
Error in line 3: wLZHdc A69 43,6
Error in line 2: S823 A69 82,5
Error in line 9: S823 A69 62,0
